moving more stuff

--- a/machine_configuration/machine-config-about.adoc
+++ b/machine_configuration/machine-config-about.adoc
@@ -1,7 +1,7 @@
 :_mod-docs-content-type: ASSEMBLY
-:context: machine-configs-custom
+:context: machine-config-pools-about
 [id="machine-config-about"]
-= About using machine config pools to configure nodes
+= About machine config pools
 include::_attributes/common-attributes.adoc[]
 
 
@@ -11,12 +11,13 @@ By default, there are two machine config pools (MCP) created by the cluster when
 
 In addition, you can apply changes to specific sets of worker nodes by using _custom machine config pools_. 
 
-For infomration on configuring nodes by using machine config objects, see xref:../machine_configuration/machine-configs-configure.adoc#machine-configs-configure[Using machine config objects to configure nodes]
+For information on configuring nodes by using machine config objects, see xref:../machine_configuration/machine-configs-configure.adoc#machine-configs-configure[Using machine config objects to configure nodes]
 
-include::modules/machine-config-pool-custom.adoc[leveloffset=+1]
+include::modules/architecture-machine-config-pools.adoc[leveloffset=+1]
 include::modules/checking-mco-status.adoc[leveloffset=+1]
 include::modules/checking-mco-node-status.adoc[leveloffset=+1]
-include::modules/machine-config-pools-custom-configure.adoc[leveloffset=+1]
-include::modules/machine-config-pools-custom-modify.adoc[leveloffset=+1]
-include::modules/machine-config-pools-custom-removing.adoc[leveloffset=+1]
+include::modules/machine-config-pool-custom.adoc[leveloffset=+1]
+include::modules/machine-config-pools-custom-configure.adoc[leveloffset=+2]
+include::modules/machine-config-pools-custom-modify.adoc[leveloffset=+2]
+include::modules/machine-config-pools-custom-removing.adoc[leveloffset=+2]
 
