--- a/modules/machine-config-pool-custom.adoc
+++ b/modules/machine-config-pool-custom.adoc
@@ -6,7 +6,7 @@
 [id="machine-config-pool-custom_{context}"]
 = About using custom machine config pools to configure nodes
 
-You can apply changes to specific sets of worker nodes by using _custom machine config pools_. A custom machine config pool manages its own sets of nodes, which are indicated with a node label. One example of this is a set of infrastructure nodes that host infrastructure components, such as the router or the image registry.   
+You can apply machine configuration changes to specific sets of worker nodes by using _custom machine config pools_. A custom machine config pool manages its own sets of nodes, which are indicated with a node label. One example of this is a set of infrastructure nodes that host infrastructure components, such as the router or the image registry.   
 
 Custom machine config pools are based on the worker machine config pool. As such, custom pools inherit their initial configuration from the `worker` pool and any change to the `worker` pool is applied to the custom pool. Changes to the custom pool are not inherited by the `worker` pool.
 
