--- a/modules/architecture-machine-config-pools.adoc
+++ b/modules/architecture-machine-config-pools.adoc
@@ -3,6 +3,7 @@
 // * architecture/control-plane.adoc
 // * machine_configuration/index.adoc
 
+:_content-type: CONCEPT
 [id="architecture-machine-config-pools_{context}"]
 = Node configuration management with machine config pools
 
