added to control plane

--- a/architecture/control-plane.adoc
+++ b/architecture/control-plane.adoc
@@ -23,7 +23,6 @@ endif::openshift-rosa[]
 // This module does not apply to OSD/ROSA
 ifndef::openshift-dedicated,openshift-rosa[]
 include::modules/architecture-machine-config-pools.adoc[leveloffset=+1]
-include::modules/architecture-machine-config-pools-custom.adoc[leveloffset=+2]
 
 [role="_additional-resources"]
 .Additional resources
@@ -35,6 +34,13 @@ ifndef::openshift-dedicated,openshift-rosa[]
 * xref:../machine_configuration/machine-config-pool-custom.adoc#machine-config-pool-custom[Using custom machine config pools to configure nodes]
 * xref:../machine_configuration/index.adoc#machine-config-drift-detection_machine-config-overview[Understanding configuration drift detection]
 * xref:../nodes/nodes/nodes-nodes-creating-infrastructure-nodes.adoc#nodes-nodes-creating-infrastructure-nodes[Creating infrastructure nodes]
+endif::openshift-dedicated,openshift-rosa[]
+
+include::modules/machine-config-pool-custom.adoc[leveloffset=+2]
+
+ifndef::openshift-dedicated,openshift-rosa[]
+[role="_additional-resources"]
+.Additional resources
 * xref:../machine_configuration/machine-config-pool-custom.adoc#machine-config-pool-custom[About using custom machine config pools to configure nodes]
 endif::openshift-dedicated,openshift-rosa[]
 
