--- a/modules/machine-config-pool-custom.adoc
+++ b/modules/machine-config-pool-custom.adoc
@@ -2,9 +2,23 @@
 //
 // * machine_configuration/machine-config-about.adoc
 
+ifeval::["{context}" == "machine-config-pools-about"]
+:machine-mgmt:
+endif::[]
+ifeval::["{context}" == "control-plane"]
+:control-plane:
+endif::[]
+
+ifdef::machine-mgmt[]
 :_content-type: PROCEDURE
 [id="machine-config-pool-custom_{context}"]
 = About using custom machine config pools to configure nodes
+endif::machine-mgmt[]
+ifdef::control-plane[]
+:_content-type: PROCEDURE
+[id="machine-config-pool-custom_{context}"]
+= Node configuration management with custom machine config pools
+endif::control-plane[]
 
 You can apply machine configuration changes to specific sets of worker nodes by using _custom machine config pools_. A custom machine config pool manages its own sets of nodes, which are indicated with a node label. One example of this is a set of infrastructure nodes that host infrastructure components, such as the router or the image registry.   
 
@@ -27,3 +41,11 @@ Note the following characteristics about nodes and machine config pools:
 ====
 If a custom node reboots, the node reboots into the `worker` machine config pool. You need to reapply the custom label to that node to place the node back in the custom pool. 
 ====
+
+ifeval::["{context}" == "machine-config-pools-about"]
+:!machine-mgmt:
+endif::[]
+ifeval::["{context}" == "control-plane"]
+:!control-plane:
+endif::[]
+
