ROX23837 Minor correction

--- a/modules/find-failing-cis-controls.adoc
+++ b/modules/find-failing-cis-controls.adoc
@@ -17,7 +17,7 @@ Each level of the chart is represented by one ring or circle.
 .Procedure
 
 . To view details about failing controls, hover over the sunburst chart.
-. Select *_n_ Controls Failing*, where _n_ is a number, to view detailed information about failing controls.
+. To view detailed information about failing controls, select *_n_ Controls Failing*, where _n_ is a number.
 The *Controls* view displays a list of failing controls filtered based on the compliance state.
 . Select a row to view more details, including control descriptions and nodes where the controls are failing.
 . The *Control Findings* section in the information panel lists nodes where the controls are failing.
