--- a/modules/otel-config-instrumentation.adoc
+++ b/modules/otel-config-instrumentation.adoc
@@ -14,7 +14,8 @@ Auto-instrumentation in OpenTelemetry refers to the capability where the framewo
 ====
 Injecting autoinstrumentation is different from injecting OpenTelemetry Collector as a sidecar. The sidecar approach runs a separate collector instance alongside your application, while autoinstrumentation automatically instruments your application to collect traces, logs, and metrics without requiring a sidecar.
 
-You can learn more about sidecar injection in the link:otel-sending-traces-logs-and-metrics-to-otel-collector.html[OpenTelemetry Collector sidecar injection].
+You can learn more about sidecar injection in the xref:otel-sending-traces-logs-and-metrics-to-otel-collector.adoc[OpenTelemetry Collector sidecar injection].
+
 ====
 
 [IMPORTANT]
