--- a/observability/otel/otel-sending-traces-logs-and-metrics-to-otel-collector.adoc
+++ b/observability/otel/otel-sending-traces-logs-and-metrics-to-otel-collector.adoc
@@ -15,7 +15,8 @@ You can configure the {OTELShortName} to send traces from your application to {T
 ====
 Injecting the OpenTelemetry Collector as a sidecar is different from injecting autoinstrumentation. The sidecar approach runs a separate collector instance alongside your application, while autoinstrumentation automatically instruments your application to collect traces, logs, and metrics without requiring a sidecar.
 
-You can learn more about autoinstrumentation in link:otel-configuration-of-instrumentation.html[OpenTelemetry instrumentation injection].
+You can learn more about autoinstrumentation in xref:otel-configuration-of-instrumentation.adoc[OpenTelemetry instrumentation injection]
+
 ====
 
 
