--- a/modules/op-tkn-pipelines-compatibility-support-matrix.adoc
+++ b/modules/op-tkn-pipelines-compatibility-support-matrix.adoc
@@ -1,3 +1,7 @@
+// This module is included in the following assemblies:
+// * release_notes/op-release-notes-1-16.adoc
+
+:_mod-docs-content-type: REFERENCE
 [id="compatibility-support-matrix_{context}"]
 = Compatibility and support matrix
 
@@ -19,17 +23,11 @@ GA:: General Availability
 
 | Operator | Pipelines | Triggers | CLI | Chains | Hub | {pac} | Results | Manual Approval Gate | |
 
+|1.16 | 0.62.x | 0.29.x | 0.38.x | 0.22.x (GA) | 1.18.x (TP) | 0.28.x (GA) | 0.12.x (TP) | 0.3.x (TP) | 4.15, 4.16, 4.17 | GA
+
 |1.15 | 0.59.x | 0.27.x | 0.37.x | 0.20.x (GA) | 1.17.x (TP) | 0.27.x (GA) | 0.10.x (TP) | 0.2.x (TP) | 4.14, 4.15, 4.16 | GA
 
 |1.14 | 0.56.x | 0.26.x | 0.35.x | 0.20.x (GA) | 1.16.x (TP) | 0.24.x (GA) | 0.9.x (TP) | NA | 4.12, 4.13, 4.14, 4.15, 4.16 | GA
-
-|1.13 | 0.53.x | 0.25.x | 0.33.x | 0.19.x (GA) | 1.15.x (TP) | 0.22.x (GA) | 0.8.x (TP) | NA | 4.12, 4.13, 4.14, 4.15 | GA
-
-|1.12 | 0.50.x | 0.25.x | 0.32.x | 0.17.x (GA) | 1.14.x (TP) | 0.21.x (GA) | 0.8.x (TP) | NA | 4.12, 4.13, 4.14 | GA
-
-|1.11 | 0.47.x | 0.24.x | 0.31.x | 0.16.x (GA) | 1.13.x (TP) | 0.19.x (GA) | 0.6.x (TP) | NA | 4.12, 4.13, 4.14 | GA
-
-|1.10 | 0.44.x | 0.23.x | 0.30.x | 0.15.x (TP) | 1.12.x (TP) | 0.17.x (GA) | NA | NA | 4.10, 4.11, 4.12, 4.13 | GA
 
 |===
 
