--- a/release_notes/op-release-notes-1-16.adoc
+++ b/release_notes/op-release-notes-1-16.adoc
@@ -32,5 +32,5 @@ include::modules/op-tkn-pipelines-compatibility-support-matrix.adoc[leveloffset=
 include::modules/making-open-source-more-inclusive.adoc[leveloffset=+1]
 
 // Release notes for Red Hat OpenShift Pipelines 1.16.0 
-// TBD
+include::modules/op-release-notes-1-16.adoc[leveloffset=+1]
 
