OSDOCS-11212: Documented the 4.17.0 z-stream RNs

--- a/release_notes/ocp-4-17-release-notes.adoc
+++ b/release_notes/ocp-4-17-release-notes.adoc
@@ -14,7 +14,7 @@ Built on {op-system-base-full} and Kubernetes, {product-title} provides a more s
 == About this release
 
 // TODO: Update with the relevant information closer to release.
-{product-title} (link:https://access.redhat.com/errata/RHSA-2024:XXXX[RHSA-2024:XXXX]) is now available. This release uses link:https://github.com/kubernetes/kubernetes/blob/master/CHANGELOG/CHANGELOG-1.30.md[Kubernetes 1.30] with CRI-O runtime. New features, changes, and known issues that pertain to {product-title} {product-version} are included in this topic.
+{product-title} (link:https://access.redhat.com/errata/RHSA-2024:3718[RHSA-2024:3718]) is now available. This release uses link:https://github.com/kubernetes/kubernetes/blob/master/CHANGELOG/CHANGELOG-1.30.md[Kubernetes 1.30] with CRI-O runtime. New features, changes, and known issues that pertain to {product-title} {product-version} are included in this topic.
 
 {product-title} {product-version} clusters are available at https://console.redhat.com/openshift. With the {cluster-manager-first} application for {product-title}, you can deploy {product-title} clusters to either on-premises or cloud environments.
 
@@ -1978,7 +1978,7 @@ With this update, the plugin checks the local cache during the disk-to-mirror pr
 
 * Previously, if a new deployment was done at the OSTree level on the host, which is identical to the current deployment on a different stateroot, OSTree identified them as equal. This behavior prevented the bootloader from updating when the `set-default` command was invoked, because OSTree did not recognize the two stateroots as a differentiating factor for deployments. With this release, OSTree's logic is modified to consider the stateroots. As a result, OSTree properly sets the default deployment to a new deployment that has different stateroots. (link:https://issues.redhat.com/browse/OCPBUGS-30276[*OCPBUGS-30276*]) 
 
-//// 
+////
 [discrete]
 [id="ocp-4-17-scalability-and-performance-bug-fixes_{context}"]
 ==== Scalability and performance
@@ -2738,11 +2738,11 @@ For any {product-title} release, always review the instructions on xref:../updat
 
 //Update with relevant advisory information
 [id="ocp-4-17-0-ga_{context}"]
-=== RHSA-2024:XXXX - {product-title} {product-version}.0 image release, bug fix, and security update advisory
+=== RHSA-2024:3718 - {product-title} {product-version}.0 image release, bug fix, and security update advisory
 
-Issued: TBD
+Issued: 01 October 2024
 
-{product-title} release {product-version}.0, which includes security updates, is now available. The list of bug fixes that are included in the update is documented in the link:https://access.redhat.com/errata/RHSA-2024:XXXX[RHSA-2024:XXXX] advisory. The RPM packages that are included in the update are provided by the link:https://access.redhat.com/errata/RHSA-2024:XXXX[RHSA-2024:XXXX] advisory.
+{product-title} release {product-version}.0, which includes security updates, is now available. The list of bug fixes that are included in the update is documented in the link:https://access.redhat.com/errata/RHSA-2024:3718[RHSA-2024:3718] advisory. The RPM packages that are included in the update are provided by the link:https://access.redhat.com/errata/RHSA-2024:3722[RHSA-2024:3722] advisory.
 
 Space precluded documenting all of the container images for this release in the advisory.
 
@@ -2752,4 +2752,9 @@ You can view the container images in this release by running the following comma
 ----
 $ oc adm release info 4.17.0 --pullspecs
 ----
+
+[id="ocp-4-17-0-updating_{context}"]
+==== Updating
+To update an {product-title} 4.16 cluster to this latest release, see xref:../updating/updating_a_cluster/updating-cluster-cli.adoc#updating-cluster-cli[Updating a cluster using the CLI].
+
 //replace 4.y.z for the correct values for the release. You do not need to update oc to run this command.
