Move HCP on RHOSP to dedicated TP table
Resolves OSDOCS-12157

--- a/release_notes/ocp-4-17-release-notes.adoc
+++ b/release_notes/ocp-4-17-release-notes.adoc
@@ -2506,11 +2506,6 @@ In the following tables, features are marked with the following statuses:
 |Technology Preview
 |General Availability
 
-|Hosted control planes
-|Not Available
-|Not Available
-|Developer Preview
-
 |====
 
 [discrete]
@@ -2545,6 +2540,11 @@ In the following tables, features are marked with the following statuses:
 |Technology Preview
 |Technology Preview
 |Technology Preview
+
+|Hosted control planes for {product-title} on {rh-openstack}
+|Not Available
+|Not Available
+|Developer Preview
 
 |====
 
