Fix 4.17 RN nits / OLM bits

--- a/release_notes/ocp-4-17-release-notes.adoc
+++ b/release_notes/ocp-4-17-release-notes.adoc
@@ -68,7 +68,7 @@ The Cluster Resource Override Operator pod is now owned by a deployment object. 
 [id="ocp-4-17-extensions-new-guide_{context}"]
 ==== {olmv1-first} documentation moved to new Extensions guide (Technology Preview)
 
-The documentation for {olmv1}, which has been in Technology Preview starting in {product-title} 4.14, is now moved and reworked as a separate guide called xref:../extensions/index.adoc#olmv1-about[Extensions]. Previously, {olmv1} documentation was a subsection of the existing xref:../operators/index.adoc#operators-overview[Operators Overview] guide, which otherwise documents the {olmv0} feature set.
+The documentation for {olmv1}, which has been in Technology Preview starting in {product-title} 4.14, is now moved and reworked as a separate guide called xref:../extensions/index.adoc#olmv1-about[Extensions]. Previously, {olmv1} documentation was a subsection of the existing xref:../operators/index.adoc#operators-overview[Operators] guide, which otherwise documents the {olmv0} feature set.
 
 The updated location and guide name reflect a more focused documentation experience and aims to differentiate between {olmv1} and {olmv0}.
 
@@ -632,9 +632,11 @@ For more information, see xref:../installing/installing_aws/ipi/installing-aws-o
 === Operator lifecycle
 
 [id="ocp-4-17-olm-extensions-guide_{context}"]
-==== {olmv1-first} documentation moved to new Extensions guide (Technology Preview)
+==== New guide location and release notes section for {olmv1-first} (Technology Preview)
 
-For more information, see the new features and enhancements section for xref:../release_notes/ocp-4-17-release-notes.adoc#ocp-4-17-extensions_release-notes[Extensions].
+For release notes about {olmv1} in {product-title} 4.17 and later, including its new guide location starting this release, see the new features and enhancements section for xref:../release_notes/ocp-4-17-release-notes.adoc#ocp-4-17-extensions_release-notes[Extensions ({olmv1})].
+
+This "Operator lifecycle" section will continue to document new features and enhancements for {olmv0} in future releases.
 
 [id="ocp-4-17-osdk_{context}"]
 === Operator development
@@ -866,7 +868,7 @@ For more information, see xref:../networking/metallb/metallb-configure-bgp-peers
 [id="ocp-4-17-expose-mtu_{context}"]
 ==== Exposing MTU for vfio-pci SR-IOV devices
 
-With this release, maximum transmission unit (MTU) on virtual function using the `vfio-pci` driver is available in the network-status pod annotation, and inside the container. 
+With this release, maximum transmission unit (MTU) on virtual function using the `vfio-pci` driver is available in the network-status pod annotation, and inside the container.
 
 For more information, see xref:../networking/hardware_networks/add-pod.adoc#nw-sriov-expose-mtu_configuring-sr-iov[Exposing MTU for vfio-pci SR-IOV devices to pod].
 
@@ -1650,7 +1652,7 @@ link:https://issues.redhat.com/browse/OCPBUGS-39428[(*OCPBUGS-39428*)]
 
 * Previously, the local etcd data store that is saved during installation was not deleted if the installation failed, consuming extra space on the installation host. With this update, the data store is deleted if infrastructure provisioning failures prevent a successful installation. (link:https://issues.redhat.com/browse/OCPBUGS-36284[*OCPBUGS-36284*])
 
-* Previously, when a folder was undefined and the data center was located in a data center folder, an wrong folder structure was created starting from the root of the vCenter server. By using the Govmomi `DatacenterFolders.VmFolder`, it used the a wrong path. With this release, the folder structure uses the data center inventory path and joins it with the virtual machine (VM) and cluster ID value, and the issue is resolved.(link:https://issues.redhat.com/browse/OCPBUGS-38616[*OCPBUGS-38616*])
+* Previously, when a folder was undefined and the data center was located in a data center folder, an wrong folder structure was created starting from the root of the vCenter server. By using the Govmomi `DatacenterFolders.VmFolder`, it used the a wrong path. With this release, the folder structure uses the data center inventory path and joins it with the virtual machine (VM) and cluster ID value, and the issue is resolved. (link:https://issues.redhat.com/browse/OCPBUGS-38616[*OCPBUGS-38616*])
 
 * Previously, when templates are defined for each failure domain, the installation program required an external connection to download the OVA in {vmw-full}. With this release, the issue is resolved. (link:https://issues.redhat.com/browse/OCPBUGS-39239[*OCPBUGS-39239*])
 
@@ -1706,7 +1708,7 @@ link:https://issues.redhat.com/browse/OCPBUGS-39428[(*OCPBUGS-39428*)]
 
 * Previously, setting an invalid Universally Unique Identifier (UUID) for the `additionalNetworkIDs` parameter of a machine pool in your `install-config` configuration file could result in the installation program exiting from installing the cluster. With this release, the installation program checks the validity of the `additionalNetworkIDs` parameter before the program continuing with installing the cluster so that this issue no longer persists. (link:https://issues.redhat.com/browse/OCPBUGS-35420[*OCPBUGS-35420*])
 
-* Previously, for {ibm-power-server-name} installer-provisioned infrastructure clusters, if no network name existed for a Dynamic Host Configuration Protocol (DHCP), the destroy code would skip deleting the DHCP resource.  With this release, a test now checks if a DHCP is in an `ERROR` state, so that the DHCP resource is deleted. (link:https://issues.redhat.com/browse/OCPBUGS-35039[*OCPBUGS-35039*])
+* Previously, for {ibm-power-server-name} installer-provisioned infrastructure clusters, if no network name existed for a Dynamic Host Configuration Protocol (DHCP), the destroy code would skip deleting the DHCP resource. With this release, a test now checks if a DHCP is in an `ERROR` state, so that the DHCP resource is deleted. (link:https://issues.redhat.com/browse/OCPBUGS-35039[*OCPBUGS-35039*])
 
 [discrete]
 [id="ocp-4-17-insights-operator-bug-fixes_{context}"]
@@ -1806,7 +1808,7 @@ link:https://issues.redhat.com/browse/OCPBUGS-39428[(*OCPBUGS-39428*)]
 
 * Previously, a race condition was generated after rebooting an {product-title} node that used a performance profile with a small number of reserved CPUs. This occurred because Single Root I/O Virtualization (SR-IOV) virtual functions (VFs) shared the same MAC address and any pods that used the VFs would experience communication issues. With this release, an update to the SR-IOV Network Operator config daemon ensures that the Operator checks that no duplicate MAC addresses do not exist on VFs. (link:https://issues.redhat.com/browse/OCPBUGS-33137[*OCPBUGS-33137*])
 
-* Previously, if you deleted the `sriovOperatorConfig` custom resource (CR), you could not create a new `sriovOperatorConfig` CR. With this release, the Single Root I/O Virtualization (SR-IOV) Network Operator removes validating webhooks when you delete the `sriovOperatorConfig` CR, so that you can create a new `sriovOperatorConfig` CR.   (link:https://issues.redhat.com/browse/OCPBUGS-37567[*OCPBUGS-37567*])
+* Previously, if you deleted the `sriovOperatorConfig` custom resource (CR), you could not create a new `sriovOperatorConfig` CR. With this release, the Single Root I/O Virtualization (SR-IOV) Network Operator removes validating webhooks when you delete the `sriovOperatorConfig` CR, so that you can create a new `sriovOperatorConfig` CR. (link:https://issues.redhat.com/browse/OCPBUGS-37567[*OCPBUGS-37567*])
 
 * Previously, when you switched your cluster to use a different load balancer, the Ingress Operator did not remove the values from the `classicLoadBalancer` and `networkLoadBalancer` parameters in the `IngressController` custom resource (CR) status. This situation caused the status of the CR to report wrong information from the `classicLoadBalancer` and `networkLoadBalancer` parameters. With this release, after you switch your cluster to use a different load balancer, the Ingress Operator removes values from these parameters so that the CR reports a more accurate and less confusing message status. (link:https://issues.redhat.com/browse/OCPBUGS-38646[*OCPBUGS-38646*])
 
@@ -1833,7 +1835,7 @@ link:https://issues.redhat.com/browse/OCPBUGS-39428[(*OCPBUGS-39428*)]
 The kube-controller-manager logs might contain more details.
 ----
 +
-This message is wrong because the logs are stored in the `cloud-controller-manager` namespace of a project. With this release,  the `SyncLoadBalancerFailed` status now communicates the correct message: +
+This message is wrong because the logs are stored in the `cloud-controller-manager` namespace of a project. With this release, the `SyncLoadBalancerFailed` status now communicates the correct message: +
 +
 [source, text]
 ----
@@ -1888,20 +1890,20 @@ metadata:
 [id="ocp-4-17-observability-bug-fixes_{context}"]
 ==== Observability
 
-* Previously, when you log on under the *Administrator* perspective on the {product-title} web console and use the *Observe* -> *Alerting* function,  an `S is not a function` displayed on alert metrics graph. This issue happened because of a missing function validation check. With this release, the function validation check is added so the alert metric chart displays collected metrics. (link:https://issues.redhat.com/browse/OCPBUGS-37291[*OCPBUGS-37291*])
+* Previously, when you log on under the *Administrator* perspective on the {product-title} web console and use the *Observe* -> *Alerting* function, an `S is not a function` displayed on alert metrics graph. This issue happened because of a missing function validation check. With this release, the function validation check is added so the alert metric chart displays collected metrics. (link:https://issues.redhat.com/browse/OCPBUGS-37291[*OCPBUGS-37291*])
 
 [discrete]
 [id="ocp-4-17-openshift-cli-bug-fixes_{context}"]
 ==== OpenShift CLI (oc)
 
-* Previously, when using oc-mirror plugin v2  with the `--delete` flag to remove operator catalogs from mirror registries, the process failed with the following error:
+* Previously, when using oc-mirror plugin v2 with the `--delete` flag to remove Operator catalogs from mirror registries, the process failed with the following error:
 +
 [source,terminal]
 ----
 2024/08/02 12:18:03 [ERROR]: [OperatorImageCollector] pinging container registry localhost:55000: Get "https://localhost:55000/v2/": http: server gave HTTP response to HTTPS client.
 ----
 +
-This occurred because oc-mirror plugin v2 was querying the local cache using HTTPS instead of HTTP. With this update, the HTTP client is now properly configured before the query, resolving the issue.(link:https://issues.redhat.com/browse/OCPBUGS-41503[*OCPBUGS-41503*])
+This occurred because oc-mirror plugin v2 was querying the local cache using HTTPS instead of HTTP. With this update, the HTTP client is now properly configured before the query, resolving the issue. (link:https://issues.redhat.com/browse/OCPBUGS-41503[*OCPBUGS-41503*])
 
 * Previously, when using the oc-mirror plugin v2 in mirror-to-disk mode, catalog images and contents were stored in `subfolders` under `working-dir`, based on the image digest. During the disk-to-mirror process in fully disconnected environments, the plugin tried to resolve the catalog image tag through the source registry, which was unavailable, leading to such errors:
 [source.terminal]
@@ -1914,7 +1916,7 @@ With this update, the plugin checks the local cache during the disk-to-mirror pr
 
 * Previously, when using oc-mirror plugin v2 in mirror-to-disk mode in disconnected environments, the plugin was unable to access `api.openshift.com` to download `graph.tar.gz`, resulting in mirroring failures. With this update, the plugin now searches the local cache for the graph image in disconnected environments where the `UPDATE_URL_OVERRIDE` environment variable is set. If the graph image is missing, the plugin skips it without failing. (link:https://issues.redhat.com/browse/OCPBUGS-38469[*OCPBUGS-38469*])
 
-* Previously, oc-mirror plugin v2 failed to mirror operator catalogs from disk-to-mirror in fully disconnected environments. This issue also affected catalogs that specified a `targetCatalog` in the `ImageSetConfiguration` file. With this update, the plugin can now successfully mirror catalogs in fully disconnected environments, and the `targetCatalog` functionality works as expected. (link:https://issues.redhat.com/browse/OCPBUGS-34521[*OCPBUGS-34521*])
+* Previously, oc-mirror plugin v2 failed to mirror Operator catalogs from disk-to-mirror in fully disconnected environments. This issue also affected catalogs that specified a `targetCatalog` in the `ImageSetConfiguration` file. With this update, the plugin can now successfully mirror catalogs in fully disconnected environments, and the `targetCatalog` functionality works as expected. (link:https://issues.redhat.com/browse/OCPBUGS-34521[*OCPBUGS-34521*])
 
 * Previously, with the oc-mirror plugin v2, there was no validation for the `-v2` vs `--v2` flags for the `oc-mirror` command. As a result, users who mistakenly used `-v2`, which sets the log level to 2, instead of `--v2`, which switches to oc-mirror plugin v2, received unclear error messages. With this update, flag validation is provided. If the `-v2` flag is used while the `ImageSetConfig` is using the `v2alpha1` API and `--v2` is not specified, an error message is displayed. The following message is now enabled that provides a clear guidance to the user:
 +
@@ -1964,7 +1966,7 @@ With this update, the plugin checks the local cache during the disk-to-mirror pr
 
 * Previously, when a new version of a custom resource definition (CRD) specified a new conversion strategy, this conversion strategy was expected to successfully convert resources. However, OLM cannot run the new conversion strategies for CRD validation without actually performing the update operation. With this release, OLM generates a warning message during the update process when CRD validations fail with the existing conversion strategy, and the new conversion strategy is specified in the new version of the CRD. (link:https://issues.redhat.com/browse/OCPBUGS-31522[*OCPBUGS-31522*])
 
-* Previously, if the `spec.grpcPodConfig.securityContextConfig` field in `CatalogSource` objects was unset within namespaces with a `PodSecurityAdmission` (PSA) level value of `restricted`, the catalog pod would not pass PSA validation. With this release, the OLM Catalog Operator now configures the catalog pod with the `securityContexts` necessary to pass PSA validation.(link:https://issues.redhat.com/browse/OCPBUGS-29729[*OCPBUGS-29729*])
+* Previously, if the `spec.grpcPodConfig.securityContextConfig` field in `CatalogSource` objects was unset within namespaces with a `PodSecurityAdmission` (PSA) level value of `restricted`, the catalog pod would not pass PSA validation. With this release, the OLM Catalog Operator now configures the catalog pod with the `securityContexts` necessary to pass PSA validation. (link:https://issues.redhat.com/browse/OCPBUGS-29729[*OCPBUGS-29729*])
 
 * Previously, the `catalogd-controller-manager` pod might not have been deployed to a node despite being in the scheduling queue, and the OLM Operator would fail to install. With this fix, CPU requests are reduced for the related resources, and the issue no longer occurs. (link:https://issues.redhat.com/browse/OCPBUGS-29705[*OCPBUGS-29705*])
 
@@ -1984,7 +1986,7 @@ With this update, the plugin checks the local cache during the disk-to-mirror pr
 
 * Previously, a bug in the `growpart` utility caused a LUKS device to lock. This caused the system to boot into an emergency mode. With this release, the call to the `growpart` utility is removed and the system successfully boots without issue. (link:https://issues.redhat.com/browse/OCPBUGS-33124[*OCPBUGS-33124*])
 
-* Previously, if a new deployment was done at the OSTree level on the host, which is identical to the current deployment on a different stateroot, OSTree identified them as equal. This behavior prevented the bootloader from updating when the `set-default` command was invoked, because OSTree did not recognize the two stateroots as a differentiating factor for deployments. With this release, OSTree's logic is modified to consider the stateroots. As a result, OSTree properly sets the default deployment to a new deployment that has different stateroots. (link:https://issues.redhat.com/browse/OCPBUGS-30276[*OCPBUGS-30276*]) 
+* Previously, if a new deployment was done at the OSTree level on the host, which is identical to the current deployment on a different stateroot, OSTree identified them as equal. This behavior prevented the bootloader from updating when the `set-default` command was invoked, because OSTree did not recognize the two stateroots as a differentiating factor for deployments. With this release, OSTree's logic is modified to consider the stateroots. As a result, OSTree properly sets the default deployment to a new deployment that has different stateroots. (link:https://issues.redhat.com/browse/OCPBUGS-30276[*OCPBUGS-30276*])
 
 ////
 [discrete]
