Update command to add the configmap in nodepool
Updated command to add the configmap in nodepool

--- a/modules/configuring-node-pools-for-hcp.adoc
+++ b/modules/configuring-node-pools-for-hcp.adoc
@@ -50,9 +50,23 @@ data:
 +
 [source,yaml]
 ----
-spec:
-  config:
-    - name: ${CONFIGMAP_NAME}
+$ oc edit nodepool <node_pool_name> --namespace <hosted_cluster_namespace>
+----
+.Example output
++
+[source,yaml]
+----
+apiVersion: hypershift.openshift.io/v1alpha1
+kind: NodePool
+metadata:
+# ...
+  name: nodepool-1
+  namespace: clusters
+# ...
+  spec:
+    config:
+      - name: ${CONFIGMAP_NAME}
+# ...
 ----
 
 //.Verification
