--- a/modules/configuring-node-pools-for-hcp.adoc
+++ b/modules/configuring-node-pools-for-hcp.adoc
@@ -50,7 +50,7 @@ data:
 +
 [source,yaml]
 ----
-$ oc edit nodepool <node_pool_name> --namespace <hosted_cluster_namespace>
+$ oc edit nodepool <nodepool_name> --namespace <hosted_cluster_namespace>
 ----
 .Example output
 +
