scan-rn-doc-417

--- a/release_notes/ocp-4-17-release-notes.adoc
+++ b/release_notes/ocp-4-17-release-notes.adoc
@@ -138,14 +138,14 @@ For more information about the `ImageBasedGroupUpgrade` API, see xref:../edge_co
 
 With this release, you can enable disk encryption with Trusted Platform Module (TPM) and Platform Configuration Registers (PCRs) protection. You can use the `diskEncryption` field in the `SiteConfig` custom resource (CR) to configure the disk encryption. Configuring the `SiteConfig` CR enables disk encryption at the time of cluster installation.
 
-For more information, see xref:../edge_computing/ztp-reference-cluster-configuration-for-vdu.adoc#ztp-sno-du-configuring-disk-encryption-with-pcr-protection_sno-configure-for-vdu[Enabling disk encryption with TPM and PCR protection]
+For more information, see xref:../edge_computing/ztp-reference-cluster-configuration-for-vdu.adoc#ztp-sno-du-configuring-disk-encryption-with-pcr-protection_sno-configure-for-vdu[Enabling disk encryption with TPM and PCR protection].
 
 [id="ocp-4-17-config-ipsec-encryption_{context}"]
 ==== IPsec encryption for multi-node clusters using {ztp} and SiteConfig resources
 
 You can now enable IPsec encryption in managed multi-node clusters that you deploy with {ztp} and {rh-rhacm-first}. You can encrypt traffic between the managed cluster and IPsec endpoints external to the managed cluster. All network traffic between nodes on the OVN-Kubernetes cluster network is encrypted with IPsec in Transport mode.
 
-For more information, see xref:../edge_computing/ztp-deploying-far-edge-sites.adoc#ztp-configuring-ipsec-using-ztp-and-siteconfig-for-mno_ztp-deploying-far-edge-sites[Configuring IPsec encryption for multi-node clusters using {ztp} and SiteConfig resources]
+For more information, see xref:../edge_computing/ztp-deploying-far-edge-sites.adoc#ztp-configuring-ipsec-using-ztp-and-siteconfig-for-mno_ztp-deploying-far-edge-sites[Configuring IPsec encryption for multi-node clusters using {ztp} and SiteConfig resources].
 
 [id="ocp-4-17-ibm-z_{context}"]
 === {ibm-z-title} and {ibm-linuxone-title}
@@ -548,7 +548,7 @@ For more information, see xref:../installing/installing_gcp/installing-gcp-custo
 
 You can now install an {product-title} cluster on {azure-short} in the Central Spain region, `spaincentral`.
 
-For more information, see xref:../installing/installing_azure/installing-azure-account.adoc#installation-azure-regions_installing-azure-account[Supported {azure-short} regions]
+For more information, see xref:../installing/installing_azure/installing-azure-account.adoc#installation-azure-regions_installing-azure-account[Supported {azure-short} regions].
 
 [id="ocp-4-17-installing-a-cluster-with-multiarch-support_{context}"]
 ==== Installing a cluster with the support for configuring multi-architecture compute machines
@@ -563,10 +563,6 @@ An {product-title} cluster with multi-architecture compute machines supports com
 * xref:../installing/installing_aws/ipi/installing-aws-multiarch-support.adoc#installing-a-cluster-with-multiarch-support_ipi-aws-multiarch-support[Installing a cluster with multi-architecture support ({aws-short}: Installer-provisioned infrastructure)]
 * xref:../installing/installing_aws/upi/installing-aws-multiarch-support-upi.adoc#installing-a-cluster-with-multiarch-support_upi-aws-multiarch-support[Installing a cluster with multi-architecture support ({aws-short}: User-provisioned infrastructure)]
 * xref:../installing/installing_gcp/installing-gcp-multiarch-support.html#installing-a-cluster-with-multiarch-support_installing-gcp-multiarch-support[Installing a cluster with multi-architecture support ({gcp-short})]
-
-==== Deploy {azure-short} in the Spain region
-
-You can deploy {product-title} {product-version} in {azure-first} in the Spain, Central (`spaincentral`) region. For more information, see xref:../installing/installing_azure/installing-azure-account.adoc#installation-azure-regions_installing-azure-account[Supported Azure regions].
 
 [id="ocp-4-17-installation-and-update-azure-capi_{context}"]
 ==== Cluster API replaces Terraform for {azure-first} installations
@@ -1563,7 +1559,7 @@ Starting in {product-title} 4.17, RukPak is now removed and relevant functionali
 [id="ocp-4-17-driver-toolkit-bug-fixes_{context}"]
 ==== Driver ToolKit (DTK)
 
-* Previously, DTK incorrectly included the same values for the `KERNEL_VERSION` and `RT_KERNEL_VERSION` environment variables. With this update, the `RT_KERNEL_VERSION` is displayed correctly. (link:https://issues.redhat.com/browse/OCPBUGS-33699[*OCPBUGS-33699*])
+* Previously, DTK incorrectly included the same values for `KERNEL_VERSION` and `RT_KERNEL_VERSION` that exist in the `/etc/driver-toolkit-release.json` configuration file. With this update, the `RT_KERNEL_VERSION` is displayed correctly. (link:https://issues.redhat.com/browse/OCPBUGS-33699[*OCPBUGS-33699*])
 
 [discrete]
 [id="ocp-4-17-cloud-etcd-operator-bug-fixes_{context}"]
@@ -1752,7 +1748,7 @@ link:https://issues.redhat.com/browse/OCPBUGS-39428[(*OCPBUGS-39428*)]
 
 * Previously, after upgrading from {product-title} 4.1 or 4.2 to version 4.15, some machines could get stuck during provisioning and never became available. This was because the `machine-config-daemon-firstboot` service was failing due to an incompatible `machine-config-daemon` binary on those nodes. With this release, the correct `machine-config-daemon` binary is copied to nodes before booting. (link:https://issues.redhat.com/browse/OCPBUGS-28974[*OCPBUGS-28974*])
 
-* Previously, if you attempted to configure on-cluster {op-system-first} image layering on a non-{op-system} node, the node became degraded. With this fix, in this situation, an error message is produced in the node logs, but the node is not degraded. (link:https://issues.redhat.com/browse/OCPBUGS-19537[*OCPBUGS-197537*])
+* Previously, if you attempted to configure on-cluster {op-system-first} image layering on a non-{op-system} node, the node became degraded. With this fix, in this situation, an error message is produced in the node logs, but the node is not degraded. (link:https://issues.redhat.com/browse/OCPBUGS-19537[*OCPBUGS-19537*])
 
 [discrete]
 [id="ocp-4-17-management-console-bug-fixes_{context}"]
