Adds limited live migration to removed feature table

--- a/release_notes/ocp-4-17-release-notes.adoc
+++ b/release_notes/ocp-4-17-release-notes.adoc
@@ -845,9 +845,11 @@ With this update, the ability to update host network settings for Single Root I/
 For more information, see xref:../networking/k8s_nmstate/k8s-nmstate-updating-node-network-config.adoc#virt-example-vf-host-services_k8s_nmstate-updating-node-network-config[Node network configuration policy for virtual functions].
 
 [id="ocp-4-17-user-defined-network_{context}"]
-==== User defined network segmentation (Technology Preview)
+==== User-defined network segmentation (Technology Preview)
 
 With {product-title} 4.17, users can create multiple networks and declare them as primary or secondary networks for their workloads through the technology preview of the `UserDefinedNetwork` (UDN) custom resource definition (CRD). With UDN, users can isolate namespaces without configuring and managing complex network policies.
+
+For more information, see xref:../networking/multiple_networks/understanding-user-defined-network.adoc#understanding-user-defined-network[Understanding user-defined networks]
 
 [id="ocp-4-17-nw-coredns-1-11-3"]
 ==== CoreDNS update to version 1.11.3
@@ -1334,6 +1336,11 @@ In the following tables, features are marked with the following statuses:
 |Deprecated
 |Deprecated
 |Deprecated
+
+|Limited live migration to OVN-Kubernetes from OpenShift SDN
+|Not Available
+|General Availability
+|Removed
 
 |====
 
@@ -2112,11 +2119,6 @@ In the following tables, features are marked with the following statuses:
 |Not Available
 |Technology Preview
 |Technology Preview
-
-| Live migration to OVN-Kubernetes from OpenShift SDN
-| Not Available
-| General Availability
-| Not Available
 
 | Overlapping IP configuration for multi-tenant networks with Whereabouts
 | Not Available
